k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-gke

spec:
  replicas: 2

  selector:
    matchLabels:
      app: hello-gke

  template:
    metadata:
      labels:
        app: hello-gke

    spec:
      containers:
        - name: hello-gke
          image: us-central1-docker.pkg.dev/proserv-task02/springboot-repo/hello-gke:v1
          ports:
          - containerPort: 8080
