k8s/service-ingress.yaml
apiVersion: v1
kind: Service

metadata:
  name: hello-gke-ingress

spec:
  type: ClusterIP

  selector:
    app: hello-gke

  ports:
  - port: 80
    targetPort: 8080
