k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-gke-service

spec:
  selector:
    app: hello-gke

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
